# upcount

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  deploy-website.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: shell.json
src-tauri/resources/templates/: time-report.typ
src-tauri/src/: commands.rs  lib.rs  pdf.rs
src-tauri/templates/: invoice.typ  quotation.typ
src/components/invoices/: pdf.tsx
src/components/time-entries/: time-report-pdf.tsx
src/routes/invoices/: details.tsx
src/routes/time-tracking/: reports.tsx
website/: package-lock.json  package.json
