[package]
name = "upcount"
version = "0.1.0"
description = "Upcount invoicing app"
authors = ["Madis Väin"]
license = ""
repository = "https://github.com/madisvain/upcount"
default-run = "upcount"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "upcount_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "2.10.2", features = ["rustls-tls"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2.5.3"
tauri-plugin-http = "2.5.7"
tauri-plugin-shell = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
tokio = { version = "1.49.0", features = ["full"] }
nanoid = "0.4"
chrono = { version = "0.4.43", features = ["serde"] }
sentry = { version = "0.46", features = ["backtrace", "contexts", "panic", "anyhow"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
